; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/booke/extr_booke_machdep.c_booke_cpu_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/booke/extr_booke_machdep.c_booke_cpu_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_FEATURE_BOOKE = common dso_local global i32 0, align 4
@cpu_features = common dso_local global i32 0, align 4
@PSL_CE = common dso_local global i32 0, align 4
@PSL_ME = common dso_local global i32 0, align 4
@PSL_EE = common dso_local global i32 0, align 4
@psl_kernset = common dso_local global i32 0, align 4
@PSL_PR = common dso_local global i32 0, align 4
@psl_userset = common dso_local global i32 0, align 4
@PSL_VEC = common dso_local global i32 0, align 4
@PSL_FP = common dso_local global i32 0, align 4
@PSL_FE0 = common dso_local global i32 0, align 4
@PSL_FE1 = common dso_local global i32 0, align 4
@psl_userstatic = common dso_local global i32 0, align 4
@MMU_TYPE_BOOKE = common dso_local global i32 0, align 4
@BUS_PROBE_GENERIC = common dso_local global i32 0, align 4
@PSL_CM = common dso_local global i32 0, align 4
@psl_userset32 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @booke_cpu_init() #0 {
  %1 = load i32, i32* @PPC_FEATURE_BOOKE, align 4
  %2 = load i32, i32* @cpu_features, align 4
  %3 = or i32 %2, %1
  store i32 %3, i32* @cpu_features, align 4
  %4 = load i32, i32* @PSL_CE, align 4
  %5 = load i32, i32* @PSL_ME, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @PSL_EE, align 4
  %8 = or i32 %6, %7
  store i32 %8, i32* @psl_kernset, align 4
  %9 = load i32, i32* @psl_kernset, align 4
  %10 = load i32, i32* @PSL_PR, align 4
  %11 = or i32 %9, %10
  store i32 %11, i32* @psl_userset, align 4
  %12 = load i32, i32* @PSL_VEC, align 4
  %13 = load i32, i32* @PSL_FP, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @PSL_FE0, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @PSL_FE1, align 4
  %18 = or i32 %16, %17
  %19 = xor i32 %18, -1
  store i32 %19, i32* @psl_userstatic, align 4
  %20 = load i32, i32* @MMU_TYPE_BOOKE, align 4
  %21 = load i32, i32* @BUS_PROBE_GENERIC, align 4
  %22 = call i32 @pmap_mmu_install(i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @pmap_mmu_install(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
